tests/rosetta/out/Zig/boolean-values.error
zig build: exit status 1
/tmp/boolean-values.zig:25:11: error: unused local constant
